# options-backtester

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
apps/cli/: main.cpp
apps/desktop/: main.cpp
include/options/analysis/: intraday_distribution.hpp  momentum.hpp
include/options/backtest/: equity_backtest.hpp  long_call_backtest.hpp
include/options/data/: bar.hpp  bar_validation.hpp  option_data.hpp  sqlite_bar_store.hpp  sqlite_option_store.hpp
include/options/providers/alpaca/: alpaca_client.hpp  alpaca_json.hpp  option_json.hpp
src/analysis/: intraday_distribution.cpp  momentum.cpp
src/backtest/: equity_backtest.cpp  long_call_backtest.cpp
src/data/: bar.cpp  bar_validation.cpp  sqlite_bar_store.cpp  sqlite_option_store.cpp
src/providers/alpaca/: alpaca_client.cpp  alpaca_json.cpp  option_json.cpp
tests/: alpaca_json_test.cpp  bar_validation_test.cpp  equity_backtest_test.cpp  intraday_distribution_test.cpp  long_call_backtest_test.cpp  momentum_test.cpp  option_json_test.cpp  sqlite_bar_store_test.cpp  sqlite_option_store_test.cpp  test.hpp  test_main.cpp
